--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
@@ -29,6 +31,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
+    "prisma": "^4.12.0",
     "tailwindcss": "^3.3.1"
   }
 }
