--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-toast": "^1.1.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
-    "class-variance-authority": "^0.5.1",
+    "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "lucide-react": "^0.130.1",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
