--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "job-tracking",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-avatar": "^1.0.2",
-    "@radix-ui/react-dialog": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.4",
-    "@radix-ui/react-label": "^2.0.1",
-    "@radix-ui/react-popover": "^1.0.5",
-    "@radix-ui/react-select": "^1.2.1",
-    "@radix-ui/react-toast": "^1.1.3",
-    "@supabase/auth-helpers-nextjs": "^0.6.1",
-    "@supabase/auth-helpers-react": "^0.3.1",
-    "@supabase/supabase-js": "^2.21.0",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11",
-    "class-variance-authority": "^0.5.2",
-    "clsx": "^1.2.1",
-    "date-fns": "^2.29.3",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
-    "lucide-react": "^0.130.1",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-day-picker": "^8.7.1",
-    "react-dom": "18.2.0",
-    "swr": "^2.1.5",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss-animate": "^1.0.5",
-    "typescript": "5.0.3"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.7",
-    "prisma": "^4.12.0",
-    "tailwindcss": "^3.3.1"
-  }
+	"name": "job-tracking",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"update-types": "npx supabase gen types typescript --project-id 'wlgwgebsqwxlttjwanjo' --schema public > ./src/types/Database.ts"
+	},
+	"dependencies": {
+		"@radix-ui/react-avatar": "^1.0.2",
+		"@radix-ui/react-dialog": "^1.0.3",
+		"@radix-ui/react-dropdown-menu": "^2.0.4",
+		"@radix-ui/react-label": "^2.0.1",
+		"@radix-ui/react-popover": "^1.0.5",
+		"@radix-ui/react-select": "^1.2.1",
+		"@radix-ui/react-toast": "^1.1.3",
+		"@supabase/auth-helpers-nextjs": "^0.6.1",
+		"@supabase/auth-helpers-react": "^0.3.1",
+		"@supabase/supabase-js": "^2.21.0",
+		"@types/node": "18.15.11",
+		"@types/react": "18.0.33",
+		"@types/react-dom": "18.0.11",
+		"class-variance-authority": "^0.5.2",
+		"clsx": "^1.2.1",
+		"date-fns": "^2.29.3",
+		"eslint": "8.37.0",
+		"eslint-config-next": "13.2.4",
+		"lucide-react": "^0.130.1",
+		"next": "13.2.4",
+		"react": "18.2.0",
+		"react-day-picker": "^8.7.1",
+		"react-dom": "18.2.0",
+		"swr": "^2.1.5",
+		"tailwind-merge": "^1.12.0",
+		"tailwindcss-animate": "^1.0.5",
+		"typescript": "5.0.3"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.7",
+		"prisma": "^4.12.0",
+		"supabase": "^1.52.2",
+		"tailwindcss": "^3.3.1"
+	}
 }
